sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:11: error: not found: value set
    set(i-k,v)
    ^